--- a/package.json
+++ b/package.json
@@ -3,12 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.1.0",
     "@types/jest": "24.0.13",
     "@types/node": "12.0.2",
     "@types/react": "16.8.18",
+    "@types/react-datepicker": "^2.3.0",
     "@types/react-dom": "16.8.4",
+    "@types/react-router-dom": "^4.3.3",
+    "animate.css": "^3.7.2",
+    "antd": "^3.19.3",
+    "axios": "^0.19.0",
+    "history": "^4.9.0",
+    "mobx": "^5.10.1",
+    "mobx-react": "^6.0.3",
+    "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
+    "rc-progress": "^2.3.0",
     "react": "^16.8.6",
+    "react-datepicker": "^2.7.0",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.7.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "typescript": "3.4.5"
   },
