--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_PRODUCTION_SERVER_URL=http://google.com
-REACT_APP_DEVELOPMENT_SERVER_URL=http://localhost:4000
+REACT_APP_PRODUCTION_SERVER_URL=http://104.131.66.95:8000
+REACT_APP_DEVELOPMENT_SERVER_URL=http://localhost:8000
